--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 aiodns==2.0.0
 aiohttp==3.7.4.post0
 async-timeout==3.0.1
+atomicwrites==1.4.0
 attrs==20.3.0
 brotlipy==0.7.0
 cchardet==2.1.7
 cffi==1.14.5
 chardet==4.0.0
+colorama==0.4.4
 idna==3.1
+iniconfig==1.1.1
 multidict==5.1.0
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
 pycares==3.1.1
 pycparser==2.20
+pyparsing==2.4.7
+pytest==6.2.2
+pytest-aiohttp==0.3.0
+toml==0.10.2
 typing-extensions==3.7.4.3
 yarl==1.6.3
